# braedonmcdonald.ca

./: .firebaserc  .gitignore  LICENSE  README.md  blog.html  config.template.py  guitar.html  index.html  justfile  publish.sh  pyproject.toml  requirements.txt  style.css
html/: 404.html  base.html  blog.html  guitar.html  index.html  photo_album.html  photo_album_list.html  style.css
html/posts/: binary-adder.html
posts/: binary-adder.html  pi-1-performance.html
scripts/: generate_site.py  manage_blog_assets.py  manage_guitar_videos.py  manage_photo_albums.py  manage_photo_albums_db.py  photo_albums_gui.py  reset_test_env.py
src/website_generation/migrations/: photo_album_migrations.py
src/website_generation/photo_album/: photo_album_cloud.py  photo_album_db.py  photo_album_filesystem.py
tests/: test_photo_album_db.py
website-generation/: compress_images.py  edit_photo_albums.py  generate_site.py  manage_guitar_videos.py  manage_photo_albums.py  manage_photo_albums_db.py  photo_album_migrations.py
website_generation/: compress_images.py  config.template.py  edit_photo_albums.py  generate_site.py  manage_guitar_videos.py  manage_photo_albums.py  manage_photo_albums_db.py  photo_album_migrations.py  photo_albums_gui.py  reset_test_env.py
website_generation/photo_album/: photo_album_cloud.py  photo_album_db.py  photo_album_filesystem.py
website_generation/photo_album/test/: test_photo_album_db.py
website_generation/templates/: photo_album.html  photo_album_list.html
